# SENTIENT_Platform_Manager

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-installers.yml  ci.yml
crates/sentient-backup-core/: Cargo.toml
crates/sentient-backup-core/src/: backup.rs  categories.rs  db.rs  error.rs  files.rs  lib.rs  manifest.rs  pg_tools.rs  progress.rs  restore.rs  util.rs
crates/sentient-installer-core/: Cargo.toml
crates/sentient-installer-core/src/: cancel.rs  checks.rs  distro.rs  kiosk.rs  lib.rs  progress.rs  sys.rs  wsl.rs
docs/: RESEARCH_AND_PLAN.md
scripts/: fetch_pgtools.py  make_icons.py
src/: app.js  index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  store.rs
